# feebot

./: .gitignore  Cargo.toml
src/: .env  main.rs
